--- a/5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8/index.html
+++ b/5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8/index.html
@@ -6,5 +6,8 @@
   
   
   Hi. hello.
-<A HREF="https://github.com/KatrionaGoldmann/Recipe-Book/BeefPie.jpeg">
+https://katrionagoldmann.github.io/Recipe-Book/BeefPie.jpeg
+ 
+  
+  <a href="https://katrionagoldmann.github.io/Recipe-Book/BeefPie.jpeg" target="_blank">PDF.</a>
 </html>
