--- a/5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8/index.html
+++ b/5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8/index.html
@@ -7,6 +7,6 @@
   
   Hi. hello.
   
-https://katrionagoldmann.github.io/Recipe-Book/Recipe_Book.pdf
+<embed src="https://katrionagoldmann.github.io/Recipe-Book/Recipe_Book.pdf" type="application/pdf" />
   
 </html>
