--- a/5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8/index.html
+++ b/5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8/index.html
@@ -1,12 +1,5 @@
 <html>
-<i>There are two rules for success: 1) Never tell everything you know.</i>
-<br><br>
-― Roger H. Lincoln
   
-  
-  
-  Hi. hello.
-  
-<embed src="https://katrionagoldmann.github.io/Recipe-Book/Recipe_Book.pdf" type="application/pdf" />
+<iframe src="https://katrionagoldmann.github.io/Recipe-Book/Recipe_Book.pdf&embedded=true" width="600" height="780" style="border: none;"></iframe>
   
 </html>
