--- a/5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8/index.html
+++ b/5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8/index.html
@@ -1,5 +1,5 @@
 <html>
   
-<iframe src="https://katrionagoldmann.github.io/Recipe-Book/Recipe_Book.pdf&embedded=true" width="600" height="780" style="border: none;"></iframe>
+<iframe src="https://katrionagoldmann.github.io/Recipe-Book/Recipe_Book.pdf" width="600" height="780" style="border: none;"></iframe>
   
 </html>
